# Rust-cli-cryptor

./: Cargo.toml
src/: main.rs
